Modified the style of the index.html

--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
 	}
 </script>
 <body>
-	<h2 class="title">Home of IT Calculators</h2>
+	<div class="titleDiv">
+		<div class="immagine">
+			<img src="rsc/balla.jpg" class="imgBalla"></img>
+		</div>
+		<div class="center"><h2 class="title">Home of IT Calculators</h2></div>
+		
+	</div>
 	<hr class="hrOne">
 	<div class="secBody">
 	<div class="boxes">
 		<div class="nbitCalc">
 			<h2>N°bit calculator</h2>
+			<p>Helps you find how many bits you need to store a certain interval with
+			a certain precision</p>
 			<button onclick="gotoNbit()">Calculate</button> 
+			
 		</div>
-		<hr class="hrTwo">
+		<!--- <hr class="hrTwo">-->
 		<div class="hz">
 			<h2>Hz calculator</h2>
+			<p>Helps you find the frequency of a certain interval with a certain
+			interval value</p>
 			<button onclick="gotoHz()">Calculate</button>
 		</div>
 	</div>
