Center aligned Result labels in Hz calculator

--- a/hz/index.html
+++ b/hz/index.html
@@ -19,7 +19,9 @@
 		<button type="button" onclick="calculate()" class="buttonC">Calculate</button>
 	</div>
 	<hr>
-<label class="resultLabels">Result: </label>
-<label id="resultLabel" class="resultLabels"></label>
+	<div class="resul">
+	<label class="resultLabels">Result: </label>
+	<label id="resultLabel" class="resultLabels"></label>
+	</div>
 </body>
 </html>
