--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 	<hr class="hrOne">
 	<div class="secBody">
 	<div class="boxes">
-		<div class="nbitCalc">
+		
+			<div class="nbitShade">
 			<h2>N°bit calculator</h2>
 			<p>Helps you find how many bits you need to store a certain interval with
 			a certain precision</p>
 			<button onclick="gotoNbit()">Calculate</button> 
-			
+			</div>
+
 		</div>
 		<!--- <hr class="hrTwo">-->
 		<div class="hz">
