--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@
 	</div>
 	<hr class="hrOne">
 	<div class="secBody">
-	<div class="boxes">
-		
-			<div class="nbitShade">
-			<h2>N°bit calculator</h2>
-			<p>Helps you find how many bits you need to store a certain interval with
-			a certain precision</p>
-			<button onclick="gotoNbit()">Calculate</button> 
+		<div class="boxes">	
+			<div class="nbitCalc">
+				<h2>N°bit calculator</h2>
+				<p>Helps you find how many bits you need to store a certain interval with
+				a certain precision</p>
+				<button onclick="gotoNbit()">Calculate</button> 
 			</div>
 
-		</div>
 		<!--- <hr class="hrTwo">-->
 		<div class="hz">
 			<h2>Hz calculator</h2>
 			<p>Helps you find the frequency of a certain interval with a certain
 			interval value</p>
 			<button onclick="gotoHz()">Calculate</button>
+		</div>
 		</div>
 	</div>
 </body>
