Created button animation on nbit calculator in the 'Calculate' button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </script>
 <body>
 	<div class="titleDiv">
-		<div class="immagine">
+		<!--<div class="immagine">
 			<img src="rsc/balla.jpg" class="imgBalla"></img>
-		</div>
+		</div>-->
 		<div class="center"><h2 class="title">Home of IT Calculators</h2></div>
 		
 	</div>
