--- a/nbit/index.html
+++ b/nbit/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>	
 	<script src="script1.js"></script>
-	<title>N°bit calculator</title>
+	<title>Nbit calculator</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h2 class="title">N°Bit calculator</h2>
+	<h2 class="title">Nbit calculator</h2>
 	<div class="secBody">
 	<div class="boxes">
 		<div class="box1">
