--- a/nbit/index.html
+++ b/nbit/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="totalDiv">
 	<h2 class="title">Nbit calculator</h2>
 	<div class="secBody">
 	<div class="boxes">
@@ -20,8 +21,9 @@
 	</div>
 		<button type="button" onclick="calculate()" class="buttonC">Calculate</button>
 	</div>
-	<hr>
+	<hr class="hr">
 <label class="resultLabels">Result: </label>
 <label id="resultLabel" class="resultLabels"></label>
+	</div>
 </body>
 </html>
