Adding Hexadecimal support

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	function gotoHz(){
 		window.location.href="hz/index.html";
 	}
+	function gotoEx(){
+		window.location.href="ex/index.html";
+	}
 </script>
 <body>
 	<div class="titleDiv">
@@ -37,6 +40,12 @@
 			interval value</p>
 			<button onclick="gotoHz()">Calculate</button>
 		</div>
+		<div class="ex">
+			<h2>Hexadecimal calculator</h2>
+			<p>Helps you convert from decimal to HEX and from HEX to decimal</p>
+			<button onclick="gotoEx()">Calculate</button>
+		</div>
+
 		</div>
 	</div>
 </body>
